--- a/paper.Rmd
+++ b/paper.Rmd
@@ -8,11 +8,12 @@ tags:
 - item analysis
 - psychology
 - psychometry
-date: "30 March 2023"
+date: "13 March 2024"
 output:
-  pdf_document: default
   html_document:
     df_print: paged
+    keep_md: true
+  pdf_document: default
 authors:
 - name: Erik Forsberg
   orcid: "0000-0002-5228-9729"
@@ -24,6 +25,9 @@ affiliations:
     Sweden
   index: 1
 ---
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 # Summary
 `D3mirt` package for `R` [@R] offers functions for analyzing questionnaire items used in psychological research in a three-dimensional latent space. The application is based on descriptive multidimensional item response theory (DMIRT) [@Reckase:2009; @Reckase:1985; @Reckase+McKinley:1991], a statistical framework that incorporates vector geometry to describe item characteristics. The method is foremost visual and the latent model can be plotted as an interactive graphical device with the help of a dedicated plot function based on `RGL` 3D visualization device system for `R` [@Adler+Murdoch:2023]. Alongside the plot function, the package also includes a dedicated model identification function that helps the user identify the DMIRT model and a model estimation function for extracting the necessary vector estimates. New additions to the DMIRT framework introduced in the `D3mirt` package include the option of studying constructs (explained below) and individual scores plotted in the three-dimensional latent model.
@@ -39,13 +43,13 @@ latent variable, the mathematical word problem illustrates a situation where it 
 reasonable to assume that a correct response is due to the respondent's location in a 
 multidimensional latent variable space. 
 
-Descriptive multidimensional item response theory (DMIRT) [@Reckase:2009; @Reckase:1985; @Reckase+McKinley:1991] has been proposed as a data reduction technique for the just mentioned situation. The method is based on using the *compensatory model*, 
+Descriptive multidimensional item response theory (DMIRT) [@Reckase:2009; @Reckase:1985; @Reckase+McKinley:1991] has been proposed as a data reduction technique for the just mentioned situation. The method is based on using a *compensatory model*, 
 i.e., a type of measurement model that uses linear combinations of $\theta$-values for ability assessment.
 This type of model assumes that the same sum can be reached by 
-adding different combinations of $\theta$-values. In turn, this implies that items can be unidimensional and *within-multidimensional*, i.e., that the item measures more than one ability.
+adding different combinations of $\theta$-values. In turn, this implies that items can be unidimensional or *within-multidimensional*, i.e., that the item measures more than one ability.
 
 The `D3mirt` approach is limited to two types of item models, dependent on item type.
-If dichotomous items are used, the analysis is based on the multidimensional extension of the two-parameter logistic model [@McKinley+Reckase:1983]. If polytomous items are used, the analysis is based on the two-parameter multidimensional graded response model [@Muraki+Carlson:1995]. The results of the analysis are presented in tables and interactive three-dimensional devices with vector arrows representing item response functions (see \autoref{fig:anes}). An example how the utility of using the package in an empirical context for item and scale analysis has been presented in @Forsberg:2024.
+If dichotomous items are used, the analysis is based on the multidimensional extension of the two-parameter logistic model [@McKinley+Reckase:1983] as the compensatory model. If polytomous items are used, the analysis is based on the two-parameter multidimensional graded response model [@Muraki+Carlson:1995] as the compensatory model. The results of the analysis are presented in tables and interactive three-dimensional devices with vector arrows representing item response functions (see \autoref{fig:anes}). An example how the utility of using the package in an empirical context for item and scale analysis has been presented in @Forsberg:2024.
 
 ![**Figure 1**. A still shot of the graphical output from `D3mirt`. The Figure illustrates a three-dimensional vector plot for items in the `anes0809offwaves` data set included in the package. The output also shows three construct vector arrows: Compassion, Fairness, and Conformity (solid black arrows).\label{fig:anes}](anes1.png){ width=100% }
 
@@ -74,7 +78,7 @@ Next, to assess multidimensional difficulty, the distance from the origin is cal
 MDIFF=B_i=\frac{-d_i}{\sqrt{\sum_{k=1}^m a^2_{ik}}}
 \end{equation}
 
-In which $d$ is the $d$-parameter index from the compensatory model. The MDIFF is denoted $B$ as the DMIRT counterpart to the $b$-parameter in the unidimensional IRT model. The MDIFF is, therefore, a characteristic of item $i$ such that higher MDIFF values indicate that higher levels of ability are necessary for a correct response  [@Reckase:2009;  @Reckase+McKinley:1991]. Observe that the denominator in Equation \autoref{eq:MDIFF} is the same expression as Equation\autoref{eq:MDISC}. 
+In which $d$ is the $d$-parameter index from the compensatory model. The MDIFF is denoted $B$ as the DMIRT counterpart to the $b$-parameter in the unidimensional IRT model. The MDIFF is, therefore, a characteristic of item $i$ such that higher MDIFF values indicate that higher levels of ability are necessary for a correct response  [@Reckase:2009;  @Reckase+McKinley:1991]. Observe that the denominator in \autoref{eq:MDIFF} is the same expression as Equation\autoref{eq:MDISC}. 
 
 Importantly, in DMIRT analysis, the MDISC and MDIFF only apply in the direction set by $\omega_{il}$ and Equation \autoref{eq:dcos} [@Reckase:2009; @Reckase+McKinley:1991]. Thus, we cannot compare these estimates directly across items, as would be the case in the unidimensional model. This is because DMIRT seeks to maximize item discrimination as a global characteristic in a multidimensional environment. To estimate item discrimination as a local characteristic in the multidimensional space, it is, however, possible to select a common direction for the items and then recalculate the discrimination, i.e., to estimate the directional discrimination (DDISC).
 
