--- a/refs.bib
+++ b/refs.bib
@@ -24,75 +24,12 @@ publisher = {Routledge},
 	title = {Rgl: 3D Visualization Using OpenGL},
 	url = {https://dmurdoch.github.io/rgl/index.html},
 	bdsk-url-1 = {https://dmurdoch.github.io/rgl/index.html}}
-
-@article{Chalmers:2012,
-    title = {{mirt: A Multidimensional Item Response Theory Package
-    for the R Environment}},
-    author = {{Chalmers}, R.~P.},
-    journal = {Journal of Statistical Software},
-    year = {2012},
-    volume = {48},
-    number = {6},
-    pages = {1-29},
-    doi = {10.18637/jss.v048.i06}}
-
-@book{deAyala:2009,
-	author = {{de Ayala}, R.~J.},
-	year = {2009},
-	title = {{The Theory and Practice of Item Response Theory}},
-	publisher = {Guilford Press}}
-
-@misc{DeBell:2010,
-	address = {Palo Alto, CA, and A. Arbor},
-	author = {{DeBell}, M., and {Krosnick}, J.~A., and {Lupia}, A.},
-	date-modified = {2023-04-27 17:32:43 +0200},
-	organization = {MI: Stanford University and the University of Michigan},
-	title = {Methodology Report and User's Guide for the 2008-2009 ANES Panel Study},
-	year = {2010}}
 	
 @book{Hambleton+Jones+Rogers:1991,
 	author = {{Hambleton}, R.~K., and {Swaminathan}, H., and {Rogers}, H.~J.},
 	year = {1991},
 	title = {Fundamentals of Item Response Theory},
 	publisher = {SAGE Publications}}
-	
-@manual{flexMIRT,
-	author = {{Houts}, C.~R. and {Cai}, L.},
-	year = {2020},
-	title = {{flexMIRT User’s Manual Version 3.52: Flexible Multilevel Multidimensional Item Analysis and Test Scoring}},
-	address = {Chapel Hill, NC},
-	publisher = {Vector Psychometric Group}}
-
-@manual{IRTPRO,
-	author = {{Thissen}, C.~L. and {du Toit}, S.~H.~C.},
-	year = {2011},
-	title = {{IRTPRO for Windows}},
-	address = {Lincolnwood, IL},
-	publisher = {Scientific Software International}}
-	
-@misc{Mathematica,
-  	author = {{Mathematica}},
-	year = {2023},
- 	title = {{Mathematica, Version 13.3}},
-	publisher = {Wolfram Research Inc.},
-  	url = {https://www.wolfram.com/mathematica},
-  	note = {Champaign, IL, 2023}}
-	
-@misc{MATLAB,
-	year = {2022},
-	author = {{MATLAB}},
-	title = {{MATLAB Version: 9.13.0 (R2022b)}},
-	publisher = {The MathWorks Inc.},
-	address = {Natick, Massachusetts, United States},
-	url = {https://www.mathworks.com}}
-
-@manual{MPLUS,
-	author = {{Muthén}, L.~K. and {Muthén}, B.~O.},
-	year = {1998-2017},
-	title = {\proglang{Mplus} User’s Guide. Eight Edition},
-	url = {https://www.statmodel.com},
-	adress = {Los Angeles, CA},
-	publisher = {Muthén & Muthén}}
 
 @article{Muraki+Carlson:1995,
 	author = {{Muraki}, E. and {Carlson}, J.~E.},
@@ -125,9 +62,10 @@ publisher = {Routledge},
 	bdsk-url-1 = {https://www.R-project.org/}}
 
 @book{Reckase:2009,
-	author = {{Reckase}, M.~D.},
-	publisher = {Springer-Verlag New York, NY},
+	publisher = {Springer-Verlag},
+	adress = {New York, NY},
 	title = {{Multidimensional Item Response Theory}},
+	author = {{Reckase}, M.~D.},
 	year = {2009},
 	doi = {10.1007/978-0-387-89976-3}}
 
@@ -151,24 +89,3 @@ publisher = {Routledge},
 	volume = {4},
 	year = {1991},
 	bdsk-url-1 = {10.1177/014662169101500407}}
-
-@article{Samejima:1969,
-	author = {{Samejima}, F.},
-	doi = {doi.org/10.1007/BF03372160},
-	journal = {Psychometrika},
-	volume = {34},
-	pages = {1-97},
-	title = {{Estimation of Latent Ability Using a Response Pattern of Graded Scores}},
-	year = {1969},
-	bdsk-url-1 = {10.1007/BF03372160}}
-	
-@Article{Weeks:2010,
-    title = {{plink: An R Package for Linking Mixed-Format Tests
-      Using IRT-Based Methods}},
-    author = {{Weeks}, J.~P.},
-    journal = {Journal of Statistical Software},
-    year = {2010},
-    volume = {35},
-    number = {12},
-    pages = {1--33},
-    url = {http://www.jstatsoft.org/v35/i12/}}
